// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test custom loader components should render the CadreLoader component properly 1`] = `
<LoaderComponent
  img="engineerLoaderGif.gif"
/>
`;

exports[`test custom loader components should render the PMLoader properly 1`] = `
<LoaderComponent
  img="undraw_light_the_fire_gt58_new.svg"
/>
`;

exports[`test custom loader components should render the generic loader component properly 1`] = `
<div
  className="custom-loader text-center"
>
  <img
    alt="loader"
    className="custom-loader-img w-50"
    src="engineerLoaderGif.gif"
  />
</div>
`;
